force-app/main/default/objects/Compliance_Check_Item__c/Compliance_Check_Item__c.object-meta.xml
<CustomObject>
    <description>Items included in a compliance check.</description>
    <label>Compliance Check Item</label>
    <nameField>
        <displayFormat>CCI-{0000}</displayFormat>
        <label>Compliance Check Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Check Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>