force-app/main/default/objects/Compliance_Check_Item__c/fields/Compliance_Check__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Check__c</fullName>
    <label>Compliance Check</label>
    <referenceTo>Compliance_Check__c</referenceTo>
    <relationshipLabel>Compliance Check Items</relationshipLabel>
    <relationshipName>Compliance_Check</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>