force-app/main/default/objects/Compliance_Check_Item__c/fields/Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Status__c</fullName>
    <label>Compliance Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compliant</fullName>
            </value>
            <value>
                <fullName>Not Compliant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>