force-app/main/default/objects/Compliance_Check_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Criminal Record Review</fullName>
            </value>
            <value>
                <fullName>Employment Verification</fullName>
            </value>
            <value>
                <fullName>Vaccine Verification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>